fix portrait alignment for mobile
center picture at the top

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,9 @@ button:hover, button:focus,
 .profile {
   max-width: 700px;
   margin: 0 auto;
+  text-align: justify;
+  text-justify: inter-character;
+  padding: 20px;
 }
 .profile__portrait {
   float: left;
@@ -162,6 +165,21 @@ button:hover, button:focus,
   height: auto;
   margin-right: 40px;
   border-radius: 50%;
+}
+
+/*Profile page design fix for mobile*/
+
+@media all and (max-width: 650px) {
+  
+  .profile__portrait {
+    clear: both;
+    float: none;
+    width: 220px;
+    padding: 15px;
+    display: flex;
+    margin: auto;
+  }
+  
 }
 
 .page-footer {
@@ -332,3 +350,4 @@ button:hover, button:focus,
   color: red;
   font-size: 10px;
 }
+
